syntax = "proto3";
package dottle;
import "dot.proto";
import "dottle.proto";
import "client.proto";
service CoordinatorService{
  // test pin pong
  rpc Test(TestRequest) returns (TestResponse){}
  rpc CreateDottle(CreateDottleRequest) returns (CreateDottleResponse){}
  // if available, return, else, wait until available
  // rpc GetDotForProcess(GetDotForProcessRequest) returns (stream GetDotForProcessResponse){}
  rpc GetDotToProcess(GetDotToProcessRequest) returns (GetDotToProcessResponse){}
}

message TestRequest{
  string id = 1;
  string message = 2;
}

message TestResponse{
  string message = 1;
}

message CreateDottleRequest{
  Dottle dottle = 1;
}

message CreateDottleResponse{

}

message GetDotToProcessRequest{
  Client client = 1;
}

message GetDotToProcessResponse{
  DotToProcess dotToProcess = 1;

}

